--- a/nano/static/js/app/templates/new_invoice_item.html
+++ b/nano/static/js/app/templates/new_invoice_item.html
@@ -47,6 +47,8 @@
           <% }) %> 
         </select>
       </div>
+      <% } else { %>
+        <input type="hidden" name="tax_rate_id" value="-1" />
       <% } %>
 
       <div class="field actions">
