--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -39,6 +39,7 @@
               <th class="quantity_th">Quantity</th>
               <th class="left details_th">Details</th>
               <th class="unitprice_th">Unit Price (£)</th>
+              <th class="salestax_th">Tax</th>
               <th class="subtotal_th">Net Subtotal (£)</th>
             </tr>
           </thead>
