--- a/nano/static/js/app/templates/invoice_item.html
+++ b/nano/static/js/app/templates/invoice_item.html
@@ -26,7 +26,7 @@
     <div class="item-controls">
       <a data-id="<%= InvoiceItem.get("id") %>" href="#" class="btn-small edit" title="Edit invoice item">Edit</a>
       <a data-id="<%= InvoiceItem.get("id") %>" href="/invoice_item/delete" class="delete">
-        <img src="/images/delete.png" />
+        <img src="/static/img/delete.png" />
       </a>
     </div>
     <% } %>
