--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -290,6 +290,7 @@ body, html {
 .content {
   clear: both;
   *zoom: 1;
+  overflow: hidden;
 }
 /* line 38, ../../../../../../../home/sanjeevan/.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .content:after {
@@ -297,7 +298,7 @@ body, html {
   display: table;
   clear: both;
 }
-/* line 59, ../sass/_layout.scss */
+/* line 60, ../sass/_layout.scss */
 .content .sidebar {
   width: 16.667%;
   float: left;
@@ -309,9 +310,11 @@ body, html {
   -o-border-radius: 0 0 0 4px;
   border-radius: 0 0 0 4px;
   background-color: #E9F2F9;
-  padding-bottom: 2em;
   border-right: 1px solid #c1daee;
-  min-height: 550px;
+}
+/* line 65, ../sass/_layout.scss */
+.content .sidebar #padding {
+  height: 2em;
 }
 /* line 68, ../sass/_layout.scss */
 .content .workspace {
@@ -320,8 +323,9 @@ body, html {
   margin-right: 0;
   #margin-left: 0px;
   display: inline;
+  background-color: #ececec;
 }
-/* line 72, ../sass/_layout.scss */
+/* line 73, ../sass/_layout.scss */
 .content .workspace-inner {
   padding: 1em;
 }
