--- a/nano/templates/invoice/_footer.html
+++ b/nano/templates/invoice/_footer.html
@@ -1,5 +1,5 @@
 
-{% if vat %}
+{% if invoice.tax > 0 %}
   <tr id="net_total_tr">
     <td colspan="2">&nbsp;</td>
     <td colspan="2" class="item_r">Net Total</td>
@@ -8,7 +8,7 @@
 
   <tr id="vat_tr">
     <td colspan="2">&nbsp;</td>
-    <td colspan="2" class="item_r">VAT</td>
+    <td colspan="2" class="item_r">TAX</td>
     <td class="item_r" id="sales_tax_amount">{{ invoice.tax|format_currency }}</td>
   </tr>
 {% endif %}
@@ -25,7 +25,7 @@
     {% endif %}
   </td>
   {% set col_span = 1 %}
-  {% if vat: %}
+  {% if invoice.tax > 0: %}
     {% set col_span = 2 %}
   {% endif %}
   
