--- a/nano/templates/account/index.html
+++ b/nano/templates/account/index.html
@@ -5,7 +5,28 @@
   {% include 'account/_filter.html' %}
 
   <div class="workspace-inner">
-    This is the content of the account page 
+
+    <form class="create inline invoice" method="post" action="{{ url_for('.index') }}">
+      <div class="header">Your account</div>  
+      <div class="fields">
+        <div class="field">
+          <label>&nbsp;</label>
+          <img src="{{ current_user.gravatar_url(80) }}" alt="profile photo" />
+        </div>
+
+        {{ render_input(form.first_name) }} 
+        {{ render_input(form.last_name) }} 
+        {{ render_input(form.email_address) }}
+        {{ render_input(form.password) }}
+        {{ render_input(form.password_confirm) }}
+        <div class="field">
+          <button class="button normal" type="submit">Save</button>
+        </div>
+      </div>
+    </form>
+
+
+
   </div>
 
 {% endblock %}
