Fixed some bugs + fleshing out invoice options

--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -2,13 +2,17 @@
 {% block content %}
 <div class="filters">
   <div class="left">
-    {% if invoice.status == 'sent' %}
-      <a href="">Reopen invoice</a>
-      {% endif %}
-    {% if invoice.status == 'draft' %}
-      <a href="">Mark as sent</a>
-      <a href="">Edit invoice</a>
+    {% if invoice.status == 'saved' %}
+      <a href="{{ url_for('.reopen', id=invoice.id) }}"><img src="/static/img/padlock_open_icon&16.png"> Reopen invoice</a>
+      <a href="{{ url_for('.print_invoice', id=invoice.id) }}"><img src="/static/img/print_icon&16.png"> Print</a>
+      <a href="{{ url_for('.email', id=invoice.id) }}"><img src="/static/img/mail_icon&16.png"> Email</a>
+      <a href="{{ url_for('.export', id=invoice.id) }}"><img src="/static/img/doc_export_icon&16.png"> Export</a>
     {% endif %}
+    {% if invoice.status == 'draft' %}
+      <a href="{{ url_for('.save', id=invoice.id) }}"><img src="/static/img/checkmark_icon&16.png"> Save</a></a>
+      <a href=""><img src="/static/img/wrench_plus_2_icon&16.png"> Edit invoice</a>
+    {% endif %}
+    <a href=""><img src="/static/img/trash_icon&16.png"> Delete</a>
   </div>
   <div class="right">
   </div>
