--- a/nano/static/js/app/templates/invoice_item.html
+++ b/nano/static/js/app/templates/invoice_item.html
@@ -25,7 +25,7 @@
     <% if (Invoice.get("status") == "draft") { %>
     <div class="item-controls">
       <a data-id="<%= InvoiceItem.get("id") %>" href="#" class="btn-small edit" title="Edit invoice item">Edit</a>
-      <a data-id="<%= InvoiceItem.get("id") %>" href="/invoice_item/delete" class="delete">
+      <a data-id="<%= InvoiceItem.get("id") %>" href="/invoice_item/delete/<%= InvoiceItem.get('id') %>" class="delete">
         <img src="/static/img/delete.png" />
       </a>
     </div>
