Lots of new changes:
 - Can update client information
 - Business info can be updated
 - PDF export for invoices using WKHTML

--- a/nano/static/css/nano/sass/_forms.scss
+++ b/nano/static/css/nano/sass/_forms.scss
@@ -125,5 +125,14 @@ form.create.company {
   input#post_code {
     width: 100px;
   }
+}
 
+form.create.client {
+  select#country, div#s2id_country {
+    width: 250px;
+  }
+
+  input#post_code {
+    width: 100px;
+  }
 }
