--- a/nano/templates/invoice/create.html
+++ b/nano/templates/invoice/create.html
@@ -2,7 +2,7 @@
 {% from 'macros/_misc.html' import render_input %}
 {% block content %}
   
-  {% include 'payment/_filter.html' %}
+  {% include 'invoice/_filter.html' %}
   
   <div class="workspace-inner">
 
