--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -624,6 +624,15 @@ form.create.company input#post_code {
   width: 100px;
 }
 
+/* line 131, ../sass/_forms.scss */
+form.create.client select#country, form.create.client div#s2id_country {
+  width: 250px;
+}
+/* line 135, ../sass/_forms.scss */
+form.create.client input#post_code {
+  width: 100px;
+}
+
 /* line 1, ../sass/_flash.scss */
 ul.flashes {
   display: block;
