--- a/nano/templates/invoice/index.html
+++ b/nano/templates/invoice/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
   
-  {% include 'payment/_filter.html' %}
+  {% include 'invoice/_filter.html' %}
 
   {% if invoices|length == 0 %}
     
