--- a/nano/templates/invoice/pdf.html
+++ b/nano/templates/invoice/pdf.html
@@ -6,7 +6,9 @@
     <div>
       <div>
         <div id="invoice-header">
-          <img alt="Logo" class="logo screen" src="#">
+          {% if company.logo %}
+            <img alt="Logo" class="logo screen" src="{{ url_for('file.download', location=company.logo.get_web_url()) }}">
+          {% endif %}
           <div class="vcard" id="company-address">
             {% include 'invoice/_company.html' %}
           </div>
