Basic user information can be updated

--- a/nano/templates/account/index.html
+++ b/nano/templates/account/index.html
@@ -17,8 +17,8 @@
         {{ render_input(form.first_name) }} 
         {{ render_input(form.last_name) }} 
         {{ render_input(form.email_address) }}
-        {{ render_input(form.password) }}
-        {{ render_input(form.password_confirm) }}
+        {{ render_input(form.password, autocomplete='off') }}
+        {{ render_input(form.password_confirm, autocomplete='off') }}
         <div class="field">
           <button class="button normal" type="submit">Save</button>
         </div>
