--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -24,7 +24,7 @@
       <div id="invoice" class="pagestyle">
         <div id="invoice-header">
           {% if company.logo %}
-          <img alt="Logo" class="logo screen" src="{{ url_for('file.download', location=company.logo.get_web_url()) }}">
+          <img alt="Logo" class="logo screen" src="{{ url_for('file.download', location=company.logo.thumbnail.get_web_url()) }}">
           {% endif %}
           <div class="vcard" id="company-address">
             {% include 'invoice/_company.html' %}
