--- a/nano/static/css/nano/stylesheets/pdf.css
+++ b/nano/static/css/nano/stylesheets/pdf.css
@@ -94,12 +94,22 @@ h1 {
   font-weight: 900;
 }
 
+/* line 24, ../sass/_export.scss */
+#invoice-header .logo.print {
+  height: 75px;
+}
+
 /* line 4, ../sass/_invoice.scss */
+#invoice-header .logo.screen {
+  height: 75px;
+}
+
+/* line 10, ../sass/_invoice.scss */
 .invoice-data-list .col {
   width: 160px;
 }
 
-/* line 11, ../sass/_invoice.scss */
+/* line 16, ../sass/_invoice.scss */
 .pagestyle {
   border-top: 1px solid #CCC;
   border-left: solid 1px #CCC;
@@ -109,15 +119,15 @@ h1 {
   margin: 0 auto;
   padding: 10px 20px;
   position: relative;
-  width: 660px;
+  width: 730px;
 }
 
-/* line 23, ../sass/_invoice.scss */
+/* line 28, ../sass/_invoice.scss */
 .draft .pagestyle {
   padding-right: 1.75cm !important;
 }
 
-/* line 27, ../sass/_invoice.scss */
+/* line 32, ../sass/_invoice.scss */
 .pagestyle:after {
   content: ".";
   display: block;
@@ -127,22 +137,22 @@ h1 {
   height: 0;
 }
 
-/* line 36, ../sass/_invoice.scss */
+/* line 41, ../sass/_invoice.scss */
 html[xmlns] .pagestyle {
   display: block;
 }
 
-/* line 40, ../sass/_invoice.scss */
+/* line 45, ../sass/_invoice.scss */
 .pagestyle img {
   border: none;
 }
 
-/* line 44, ../sass/_invoice.scss */
+/* line 49, ../sass/_invoice.scss */
 #invoice {
   display: block;
   margin: 2em auto;
 }
-/* line 48, ../sass/_invoice.scss */
+/* line 53, ../sass/_invoice.scss */
 #invoice .item-controls {
   position: absolute;
   right: 10px;
