--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -653,11 +653,16 @@ ul.flashes {
 }
 
 /* line 4, ../sass/_invoice.scss */
+#invoice-header .logo.screen {
+  height: 75px;
+}
+
+/* line 10, ../sass/_invoice.scss */
 .invoice-data-list .col {
   width: 160px;
 }
 
-/* line 11, ../sass/_invoice.scss */
+/* line 16, ../sass/_invoice.scss */
 .pagestyle {
   border-top: 1px solid #CCC;
   border-left: solid 1px #CCC;
@@ -670,12 +675,12 @@ ul.flashes {
   width: 730px;
 }
 
-/* line 23, ../sass/_invoice.scss */
+/* line 28, ../sass/_invoice.scss */
 .draft .pagestyle {
   padding-right: 1.75cm !important;
 }
 
-/* line 27, ../sass/_invoice.scss */
+/* line 32, ../sass/_invoice.scss */
 .pagestyle:after {
   content: ".";
   display: block;
@@ -685,22 +690,22 @@ ul.flashes {
   height: 0;
 }
 
-/* line 36, ../sass/_invoice.scss */
+/* line 41, ../sass/_invoice.scss */
 html[xmlns] .pagestyle {
   display: block;
 }
 
-/* line 40, ../sass/_invoice.scss */
+/* line 45, ../sass/_invoice.scss */
 .pagestyle img {
   border: none;
 }
 
-/* line 44, ../sass/_invoice.scss */
+/* line 49, ../sass/_invoice.scss */
 #invoice {
   display: block;
   margin: 2em auto;
 }
-/* line 48, ../sass/_invoice.scss */
+/* line 53, ../sass/_invoice.scss */
 #invoice .item-controls {
   position: absolute;
   right: 10px;
