Fixed date time formatting

--- a/nano/templates/invoice/edit.html
+++ b/nano/templates/invoice/edit.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
     var dueDateField = $('.field-due_date');
     var dueDatePicker = null;
-    var dateFormat = 'D MMM YYYY'
+    var dateFormat = 'D MMM YYYY';
 
     $(document).ready(function(){
       var picker1 = new Pikaday({ field: document.getElementById('date_issued'), format: dateFormat });
