Fixed major bug with defaults overriding saved values in the form

--- a/nano/static/css/nano/sass/_base.scss
+++ b/nano/static/css/nano/sass/_base.scss
@@ -21,9 +21,9 @@ $show-grid-backgrounds: false;
 $nav-bg-colour: #4096EE;
 $blue:          #4096EE;
 $tile-title-bg: #A30305;
-$h1-colour:     #EE3322;
+$h1-colour:     #333333;
 $link-colour:   #0077ee;
-$bg-colour:     #fff;
+$bg-colour:     #ffffff;
 $panel-colour:  #3584D8;
 
 $base-font-size: 12px;
