--- a/nano/templates/layout.html
+++ b/nano/templates/layout.html
@@ -24,7 +24,7 @@
       {% include '_flash.html' %}
       
       <div class="header">
-        <img src="/static/img/logo.png">
+        <a href="/"><img src="/static/img/logo.png"></a>
         
         {% if current_user.is_authenticated() %}
         <div class="account">
