--- a/nano/static/css/nano/sass/_shared.scss
+++ b/nano/static/css/nano/sass/_shared.scss
@@ -109,3 +109,27 @@ h1 {
     border-bottom: none;
   }
 }
+
+span.label {
+  color: #FFFFFF;
+  display: inline-block;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  padding: 2px 4px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+.label-success, .badge-success {
+  background-color: #468847;
+}
+
+.label-important, .badge-important {
+  background-color: #B94A48;
+}
+
+.label-info, .badge-info {
+  background-color: #3A87AD;
+}
