--- a/nano/static/css/nano/stylesheets/screen.css
+++ b/nano/static/css/nano/stylesheets/screen.css
@@ -72,7 +72,7 @@ a img {
 
 /* line 6, ../sass/_shared.scss */
 h1 {
-  color: #ee3322;
+  color: #333333;
   font-size: 2.333em;
   line-height: 1.714em;
   line-height: 1em;
@@ -211,6 +211,34 @@ h1 {
 /* line 108, ../sass/_shared.scss */
 .data-list .row:last-child {
   border-bottom: none;
+}
+
+/* line 113, ../sass/_shared.scss */
+span.label {
+  color: #FFFFFF;
+  display: inline-block;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  padding: 2px 4px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+/* line 125, ../sass/_shared.scss */
+.label-success, .badge-success {
+  background-color: #468847;
+}
+
+/* line 129, ../sass/_shared.scss */
+.label-important, .badge-important {
+  background-color: #B94A48;
+}
+
+/* line 133, ../sass/_shared.scss */
+.label-info, .badge-info {
+  background-color: #3A87AD;
 }
 
 /* line 2, ../sass/_layout.scss */
